@@ -8,6 +8,7 @@ Bug fixes
 ++++++++++++++++++
 
 - fix issue57 -f|--looponfail to work with xpassing tests
+- fix pyimport() to work with directories
 
 Changes between 1.3.0 and 1.3.1
 ==================================================
